force-app/main/default/objects/Product2/fields/Acceptable_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Loan_Purpose__c</fullName>
    <label>Acceptable Loan Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>General Personal</fullName>
                <isActive>false</isActive>
                <label>General Personal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>