force-app/main/default/objects/Product2/fields/Acceptible_Porrowers__c.field-meta.xml
<CustomField>
    <fullName>Acceptible_Porrowers__c</fullName>
    <label>Acceptible Porrowers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Naural Person</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>