force-app/main/default/objects/Product2/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Retired Ended</fullName>
            </value>
            <value>
                <fullName>Retired Superceded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>