force-app/main/default/objects/Product2/fields/Age_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Age_Maximum__c</fullName>
    <label>Age Maximum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>