force-app/main/default/objects/Product2/fields/Age_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Age_Minimum__c</fullName>
    <label>Age Minimum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>