force-app/main/default/objects/Product2/fields/Bk_Tier_2_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bk_Tier_2_Rate__c</fullName>
    <label>Bk Tier 2 Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>