force-app/main/default/objects/Product2/fields/Bk_Tier_3_Limit__c.field-meta.xml
<CustomField>
    <fullName>Bk_Tier_3_Limit__c</fullName>
    <label>Bk Tier 3 Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>