force-app/main/default/objects/Product2/fields/Bk_Tier_3_Type__c.field-meta.xml
<CustomField>
    <fullName>Bk_Tier_3_Type__c</fullName>
    <label>Bk Tier 3 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>