force-app/main/default/objects/Product2/fields/Brokerage_Description__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Description__c</fullName>
    <label>Brokerage Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>