force-app/main/default/objects/Product2/fields/Brokerage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Frequency__c</fullName>
    <label>Brokerage Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>