force-app/main/default/objects/Product2/fields/Brokerage_Override_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Override_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage Override Allowed</label>
    <type>Checkbox</type>
</CustomField>