force-app/main/default/objects/Product2/fields/Brokerage_Override_Error_Display__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Override_Error_Display__c</fullName>
    <label>Brokerage Override Error Display</label>
    <length>100</length>
    <type>Text</type>
</CustomField>