force-app/main/default/objects/Product2/fields/Comarison_Rate_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Comarison_Rate_Symbol__c</fullName>
    <label>Comarison Rate Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>** ($10K over 3 years)</fullName>
            </value>
            <value>
                <fullName>* ($30K over 5 years)</fullName>
            </value>
            <value>
                <fullName>^ ($150K over 25 years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>