force-app/main/default/objects/Product2/fields/Commission_Description__c.field-meta.xml
<CustomField>
    <fullName>Commission_Description__c</fullName>
    <label>Commission Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>