force-app/main/default/objects/Product2/fields/Commission_Override_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Commission_Override_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Override Allowed</label>
    <type>Checkbox</type>
</CustomField>