force-app/main/default/objects/Product2/fields/Commission_Override_Error_Display__c.field-meta.xml
<CustomField>
    <fullName>Commission_Override_Error_Display__c</fullName>
    <label>Commission Override Error Display</label>
    <length>100</length>
    <type>Text</type>
</CustomField>