force-app/main/default/objects/Product2/fields/Comparison_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Rate_Amount__c</fullName>
    <label>Comparison Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>