force-app/main/default/objects/Product2/fields/Comparison_Rate_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Rate_Disclaimer__c</fullName>
    <label>Comparison Rate Disclaimer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>