force-app/main/default/objects/Product2/fields/Comparison_Rate_Display__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Rate_Display__c</fullName>
    <label>Comparison Rate Display</label>
    <type>TextArea</type>
</CustomField>