force-app/main/default/objects/Product2/fields/Comparison_Rate_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Rate_Term_Years__c</fullName>
    <label>Comparison Rate Term (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>