force-app/main/default/objects/Product2/fields/Contract_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Required for Approval Email</label>
    <type>Checkbox</type>
</CustomField>