force-app/main/default/objects/Product2/fields/Credit_Score_Grey_Area_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Grey_Area_Up_To__c</fullName>
    <label>Credit Score Grey Area Up To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>