force-app/main/default/objects/Product2/fields/Credit_Score_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Minimum__c</fullName>
    <label>Credit Score Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>