force-app/main/default/objects/Product2/fields/Customer_Approval_Email_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Email_Instructions__c</fullName>
    <label>Customer Approval Email Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>