force-app/main/default/objects/Product2/fields/Customer_Approval_Email_Instructions_Act__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Email_Instructions_Act__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Approval Email Instructions Act</label>
    <type>Checkbox</type>
</CustomField>