force-app/main/default/objects/Product2/fields/Date_to__c.field-meta.xml
<CustomField>
    <fullName>Date_to__c</fullName>
    <label>Date to</label>
    <type>Date</type>
</CustomField>