force-app/main/default/objects/Product2/fields/Decision_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Decision_in_Hours__c</fullName>
    <label>Decision in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>