force-app/main/default/objects/Product2/fields/Default_Details__c.field-meta.xml
<CustomField>
    <fullName>Default_Details__c</fullName>
    <label>Default Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>