force-app/main/default/objects/Product2/fields/Default_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Loan_Term__c</fullName>
    <label>Default Loan Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>