force-app/main/default/objects/Product2/fields/Default_Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Loan_Term_Months__c</fullName>
    <formula>Default_Loan_Term__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Loan Term (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>