force-app/main/default/objects/Product2/fields/Default_Product__c.field-meta.xml
<CustomField>
    <fullName>Default_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Product</label>
    <type>Checkbox</type>
</CustomField>