force-app/main/default/objects/Product2/fields/Eligibility_Description__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Description__c</fullName>
    <label>Eligibility Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>