force-app/main/default/objects/Product2/fields/Exception_Message_Active__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Message Active</label>
    <type>Checkbox</type>
</CustomField>