force-app/main/default/objects/Product2/fields/Extra_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Extra_Repayments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Repayments</label>
    <type>Checkbox</type>
</CustomField>