force-app/main/default/objects/Product2/fields/Extra_Repayments_Details__c.field-meta.xml
<CustomField>
    <fullName>Extra_Repayments_Details__c</fullName>
    <label>Extra Repayments Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>