force-app/main/default/objects/Product2/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>