force-app/main/default/objects/Product2/fields/Financial_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Financial_Defaults__c</fullName>
    <label>Financial Defaults</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Considered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>