force-app/main/default/objects/Product2/fields/Frequency_Options__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Options__c</fullName>
    <label>Frequency Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Interest in Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>