force-app/main/default/objects/Product2/fields/Funding_Authorisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Authorisation_Type__c</fullName>
    <label>Funding Authorisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct with lender</fullName>
            </value>
            <value>
                <fullName>Managed via Parker Lane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>