force-app/main/default/objects/Product2/fields/Funding_Options_Available__c.field-meta.xml
<CustomField>
    <fullName>Funding_Options_Available__c</fullName>
    <label>Funding Options Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In full before installation</fullName>
            </value>
            <value>
                <fullName>In full after installation</fullName>
            </value>
            <value>
                <fullName>Part payment before (and remainder after) installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>