force-app/main/default/objects/Product2/fields/Instruction_In_full_after_installation__c.field-meta.xml
<CustomField>
    <fullName>Instruction_In_full_after_installation__c</fullName>
    <label>Instruction: In full after installation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>