force-app/main/default/objects/Product2/fields/Instruction_Part_payment_before__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Part_payment_before__c</fullName>
    <label>Instruction: Part payment before</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>