force-app/main/default/objects/Product2/fields/Interest_Rate_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Based_On__c</fullName>
    <label>Interest Rate Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Tiered Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>