force-app/main/default/objects/Product2/fields/Interest_Rate_Override__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Rate Override</label>
    <type>Checkbox</type>
</CustomField>