force-app/main/default/objects/Product2/fields/Lender_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Lender_phone_number__c</fullName>
    <label>Lender phone number</label>
    <type>Phone</type>
</CustomField>