force-app/main/default/objects/Product2/fields/Loan_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amounts__c</fullName>
    <formula>&apos;$&apos; &amp; TEXT(Minimum_Loan_Amount__c) &amp; &apos; to $&apos; &amp; TEXT(Maximum_Loan_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amounts</label>
    <type>Text</type>
</CustomField>