force-app/main/default/objects/Product2/fields/Loan_Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Duration__c</fullName>
    <formula>TEXT(Minimum_Loan_Term_Years__c) &amp; &apos; to &apos; &amp;  TEXT(Maximum_Loan_Term_Years__c) &amp; &apos; Years&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Term Duration</label>
    <type>Text</type>
</CustomField>