force-app/main/default/objects/Product2/fields/Max_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Term__c</fullName>
    <formula>Maximum_Loan_Term_Years__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Loan Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>