force-app/main/default/objects/Product2/fields/Maximum_Loan_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Loan_Term_Years__c</fullName>
    <label>Maximum Loan Term (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>