force-app/main/default/objects/Product2/fields/Min_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Min_Loan_Term__c</fullName>
    <formula>Minimum_Loan_Term_Years__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Loan Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>