force-app/main/default/objects/Product2/fields/Minimum_Loan_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Loan_Term_Years__c</fullName>
    <label>Minimum Loan Term (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>