force-app/main/default/objects/Product2/fields/No_of_Signatories_allowed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Signatories_allowed__c</fullName>
    <label>No. of Signatories allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Either to sign</fullName>
            </value>
            <value>
                <fullName>Both to sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>