force-app/main/default/objects/Product2/fields/Number_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applicants__c</fullName>
    <label>Number of Applicants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to 1 Applicant</fullName>
            </value>
            <value>
                <fullName>Up to 2 Applicants</fullName>
            </value>
            <value>
                <fullName>Up to 3 Applicants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>