force-app/main/default/objects/Product2/fields/Ongoing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Fees__c</fullName>
    <label>Ongoing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>