force-app/main/default/objects/Product2/fields/Product_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Order__c</fullName>
    <label>Product Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>