force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green Loan</fullName>
            </value>
            <value>
                <fullName>Consolidation Loan</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>First Home Loan</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
                <isActive>false</isActive>
                <label>Asset Finance</label>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
                <isActive>false</isActive>
                <label>Debt Consolidation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>