force-app/main/default/objects/Product2/fields/Product_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>Product_Type__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>