force-app/main/default/objects/Product2/fields/Redraw__c.field-meta.xml
<CustomField>
    <fullName>Redraw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redraw</label>
    <type>Checkbox</type>
</CustomField>