force-app/main/default/objects/Product2/fields/Redraw_Details__c.field-meta.xml
<CustomField>
    <fullName>Redraw_Details__c</fullName>
    <label>Redraw Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>