force-app/main/default/objects/Product2/fields/Referrer_Approval_Email_Instructions_Act__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Approval_Email_Instructions_Act__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referrer Approval Email Instructions Act</label>
    <type>Checkbox</type>
</CustomField>