force-app/main/default/objects/Product2/fields/Referrer_Approval_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Approval_Instructions__c</fullName>
    <label>Referrer Approval Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>