force-app/main/default/objects/Product2/fields/Risk_Insurance_Available__c.field-meta.xml
<CustomField>
    <fullName>Risk_Insurance_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Insurance Available</label>
    <type>Checkbox</type>
</CustomField>