force-app/main/default/objects/Product2/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsecured or Secured</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>