force-app/main/default/objects/Product2/fields/Send_Payment_Request_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_Request_To__c</fullName>
    <label>Send Payment Request To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send to Lender</fullName>
            </value>
            <value>
                <fullName>Send to Parker Lane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>